[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Tiles/GroundTile.png" type="Texture" id=1]
[ext_resource path="res://Assets/Tiles/TileHover.png" type="Texture" id=2]
[ext_resource path="res://Actors/Tiles/Tile.gd" type="Script" id=3]
[ext_resource path="res://Assets/Tiles/WhiteTileFilter.png" type="Texture" id=4]
[ext_resource path="res://Assets/Tiles/TileSelected.png" type="Texture" id=6]
[ext_resource path="res://UI/ClaimedMark/ClaimedMark.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Tiles/GreenTileFilter.png" type="Texture" id=8]

[node name="Tile" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HoverSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="WhiteFilter" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="GreenFilter" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="YellowFilter" type="Sprite" parent="."]
visible = false
texture = ExtResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
modulate = Color( 0.235294, 1, 0.603922, 1 )
position = Vector2( -0.237144, 0.15778 )
scale = Vector2( 0.999642, 1 )
polygon = PoolVector2Array( -30.3444, -15.404, 0.13649, -30.8664, 30.9034, -15.404, 30.9034, 15.0474, 0.13649, 30.352, -30.3149, 15.2052 )

[node name="ClaimedMark" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -19.0
margin_top = -26.0
margin_right = -19.0
margin_bottom = -26.0
[connection signal="input_event" from="Hitbox" to="." method="_on_Hitbox_input_event"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
